[tool.poetry]
name = "hackerrank"
version = "0.1.0"
description = ""
authors = ["Farzad FARID <farzy@farzy.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
scipy = "*"
scikit-learn = "*"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
